--- a/src/app/components/viewallflights/viewallflights.component.html
+++ b/src/app/components/viewallflights/viewallflights.component.html
@@ -1,39 +1,44 @@
-<div class="view">
-    <table class="tbl">
-        
-        <thead>
-            <tr><th colspan="7" class="td"><h1 class="h1">FLIGHTS</h1></th></tr>
-            <tr>
-                <th class="td" colspan="7">
-                <span class="searchicon">⌕</span><input type="text" class="search" name="search" [(ngModel)]="searchText" placeholder=" Search for Flights">
-                </th>
-            </tr>
-            <tr class="th">
-                <th class="td">Flight Number</th>
-                <th class="td">Origin</th>
-                <th class="td">Departure Time</th>
-                <th class="td">Destination</th>
-                <th class="td">Arrival Time</th>
-                <th class="td">Duration</th> 
-                <th class="td"></th>                         
+<div class="bg">    
+    <div class="view">
+        <table class="tbl">
             
-            </tr>
-        </thead>
-        <tbody>
-            
-            <tr class="tr" *ngFor="let flight of flights | filter:searchText">
-                <td class="td">{{flight.FlightNumber}}</td>
-                <td class="td">{{flight.departure_location}}</td>
-                <td class="td">{{flight.departure_time}}</td>
-                <td class="td">{{flight.arrival_location}}</td>
-                <td class="td">{{flight.arrival_time}}</td>
-                <td class="td">{{flight.duration}}</td>
-                <td class="td">
-                    <button class="bt update" [routerLink]="['/updateflight/', flight.FlightNumber]">Update</button><br>
-                    <button class="bt delete" [routerLink]="['/deleteflight/', flight.FlightNumber]">Delete</button>
-                </td>
-            
-            </tr>
-        </tbody>
-    </table>
+            <thead>
+                <tr><th colspan="7" ><h1 class="h1">FLIGHTS</h1></th></tr>
+                <tr>
+                    <th colspan="7">
+                       <div class="searchplace">
+                           <span class="searchicon">⌕</span>
+                            <input type="text" class="search" name="search" [(ngModel)]="searchText" placeholder="Search for Flights">
+                        </div> 
+                    </th>
+                </tr>
+                <tr class="th">
+                    <th class="th">Flight Number</th>
+                    <th class="th">Origin</th>
+                    <th class="th">Departure Time</th>
+                    <th class="th">Destination</th>
+                    <th class="th">Arrival Time</th>
+                    <th class="th">Duration</th> 
+                    <th class="th"></th>                         
+                
+                </tr>
+            </thead>
+            <tbody>
+                
+                <tr class="tr" *ngFor="let flight of flights | filter:searchText">
+                    <td class="td">{{flight.FlightNumber}}</td>
+                    <td class="td">{{flight.departure_location}}</td>
+                    <td class="td">{{flight.departure_time}}</td>
+                    <td class="td">{{flight.arrival_location}}</td>
+                    <td class="td">{{flight.arrival_time}}</td>
+                    <td class="td">{{flight.duration}}</td>
+                    <td class="td">
+                        <button class="bt update" [routerLink]="['/updateflight/', flight.FlightNumber]">Update</button><br>
+                        <button class="bt delete" [routerLink]="['/deleteflight/', flight.FlightNumber]">Delete</button>
+                    </td>
+                
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
