--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -5,7 +5,8 @@
     justify-content: center;
     min-height: 100vh;
     padding: 2rem;
-   background-color: red;
+    background-image: url(../../../assets/login_image.jpg);
+   background-color: black;
 }
 .logincontainer
 {
