--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,19 +1,33 @@
 <div class="loginwrapper">
     <div class="logincontainer">
         <h1 class='loginform__heading'>Login</h1>
-        <form class="loginform">
+        <form class="loginform" #f="ngForm" novalidate (ngSubmit)="f.form.valid && onSubmit(f.value)" >
             <div class="inputcontainer">
                 <label class="label">Email</label>
-                <input type='email'  class='loginform__input'  name="username" autoComplete="off" required/>
-
+                <input type='email' class='loginform__input' name="username" autoComplete="off" required ngModel
+                    #email_id="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" />
+                <div *ngIf="email_id.invalid && (email_id.dirty || email_id.touched ||f.submitted)">
+                    <small>
+                        <mat-error *ngIf="email_id.errors?.required">Email is a required field</mat-error>
+                    </small>
+                    <small *ngIf="email_id.errors?.pattern">This is not a valid Email</small>
+                </div>
             </div>
+
             <div class='pwdcontainer inputcontainer'>
                 <label class="label">Password</label>
-                <input [type]="visible ? 'text' : 'password'"  id='password' class='loginform__input' name="password" minLength="8" autoComplete="off" required/>
-                <fa-icon [icon]  =  "visible ? faEye : faEyeSlash "  (click) = "onClick()" class="loginform__toggleicon"></fa-icon>
+                <input [type]="visible ? 'text' : 'password'" id='password' class='loginform__input' name="password"
+                    ngModel #password="ngModel" minLength="8" autoComplete="off" required />
+                <fa-icon [icon]="visible ? faEye : faEyeSlash " (click)="onClick()" class="loginform__toggleicon">
+                </fa-icon>
+
+                <div *ngIf="password.invalid && (password.dirty || password.touched ||f.submitted)">
+                    <small *ngIf="password.errors?.required">Password is required</small>
+                    <small *ngIf="password.errors?.minlength">Password must be at least 8 charachters</small>
+                </div>
 
             </div>
-            <button type="submit" class="submitbtn" > Login </button>
+            <button type="submit" class="submitbtn"> Login </button>
 
         </form>
 
