update header component add html and css of header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+    <div class="logo">
+        <a [routerLink]="['/']"> LOGO </a>   
+     </div>
+    <div class="nav-items">
+        <ul>
+            <li><a [routerLink]="['/flight/search']">Search</a></li>
+            <li><a [routerLink]="['/login']">Login</a></li>
+            <li><a [routerLink]="['/signup']">Signup</a></li>
+          </ul>
+    </div>
+ </header> 
