update airplanecard.component.ts redirect on clicking book now

--- a/src/app/components/displayflight/displayflight.component.html
+++ b/src/app/components/displayflight/displayflight.component.html
@@ -1,15 +1,4 @@
- <header>
-    <div class="logo">
-        <a [routerLink]="['/']"> LOGO </a>   
-     </div>
-    <div class="nav-items">
-        <ul>
-            <li><a [routerLink]="['/flight/search']">Search</a></li>
-            <li><a [routerLink]="['/login']">Login</a></li>
-            <li><a [routerLink]="['/signup']">Signup</a></li>
-          </ul>
-    </div>
- </header> 
+ <app-header></app-header>
 
  <div class="search-details">
     <div class="heading">
